# torch_oplifter

./: .gitignore  README.md  extension_codegen_backend.py  logs.md  new_test.py  test.py
oplifter/: CMakeLists.txt  README.md  setup.py
oplifter/csrc/: oplifter.cpp
oplifter/csrc/impl/: oplifter_impl.cpp  oplifter_impl.h
oplifter/csrc/operators/: Arange.cpp  Binary.cpp  CMakeLists.txt  Eltwise.cpp  FillTensor.cpp  Layernorm.cpp  Linear.cpp  Softmax.cpp  Transpose.cpp  _Ops.h
oplifter/csrc/runtime/: CMakeLists.txt  OplifterCachingAllocator.cpp  OplifterCachingAllocator.h  Runtime.cpp  Runtime.h  Utils.cpp  Utils.h  raw_mem_manager.h
